ViTables ChangeLog
==================
** October 30, 2010 **
The utils.py module has been simplified.

Some unwanted directories have been removed from the repository.

Copyright statements updated in every source file.

** October 26, 2010 **
Information about version number and copyright has been updated.

** December 29, 2009 **
Module nodePropDlg.py has been refactored and simplified.

Some code dealing with PyTables datatypes and numpy datatypes has been cleaned.

** December 28, 2009 **
Rows insertion/deletion in the tree view has been simplified and debugged.

** December 27, 2009 **
The import_csv and export_csv plugins have been improved.

** December 23, 2009 **
Inconsistencies in the spacing between lines have been fixed.

Tree view usability improved.

** December 21, 2009 **
Added the new plugins_menu.py plugin. It show info about the loaded plugins.

** December 20, 2009 **
The code dealing with application setup has been debugged and refactored.

** December 19, 2009 **
The plugins framework has been debugged and refactored and has a new ui.

** December 15, 2009 **
The deprecated (in Python 2.6) sets module is not used anymore.

** December 14, 2009 **
The code dealing with the tree view has been debugged and simplified.

** December 11, 2009 **
Fixed a subtle bug in the automatic sync between tree view pane and workspace.

** December 10, 2009 **
In the tree view fixed a bug in the cut node + paste node sequence.

** December 09, 2009 **
The logger module has been refactored and simplified.

Fixed a bug in the context menu of the logger.

Fixed a couple of minor bugs.

** December 05, 2009 **
The documentation browser subpackage has been simplified.

Several question like message boxes have been customised.

** December 04, 2009 **
Removed wild imports and other minor annoyances common to most modules.

The time series plugin has been refactored.

pluginsManager module has been refactored to improve some bizarre behavior.
