@@ -7,6 +7,8 @@ Some unwanted directories have been removed from the repository.
 
 Copyright statements updated in every source file.
 
+The method used for dynamically load UI files has been simplified.
+
 ** October 26, 2010 **
 Information about version number and copyright has been updated.
 
